= Release Notes

== Version 0.3.0

* allow accelerating master switch via POST to redis configuration server
* embedded http server into the redis configuration server (port 8080)
* fixed a problem with redis shutdown command
* upgraded to redis 2.2.2
* upgraded to amqp gem version 0.8 line
* use hiredis as the redis backend, which overcomes lack of proper time-outs in the "generic" redis-rb
  gem for Ruby 1.9
* use fully qualified hostnames to identify redis configuration clients

== Version 0.2.9.8

* since version 2.0, RabbitMQ supports Basic.reject(:requeue => true). we use it now too,
  because it enhances performance of message processors. this means of course, you can
  only use beetle gem versions >= 0.2.9.8 if your rabbitmq brokers are at least version 2.0.
* publishing timeout defaults to 0 to avoid extreme message loss in some cases


== Version 0.2.9.7

* use new bunny_ext gem and allow specification of global publishing timeouts
* registering a message now automatically registers the corresponding exchange
* don't try to bind queues for an exchange hich has no queue
* ruby 1.9.2 compatibility fixes

== Version 0.2.9

* Beetle::Client now raises an exception when it fails to publish a message to at least 1 RabbitMQ server
* Subscribers are now stopped cleanly to avoid 'closed abruptly' messages in the RabbitMQ server log

== Version 0.2.6

* Set dependency on ActiveSupport to 2.3.x since it ain't compatible to version 3.x yet
* Publishers catch a wider range (all?) of possible exceptions when publishing messages
* Redis Configuration Servers detect and warn when unknown Redis Configuration Clients connect

== Version 0.2.5

Added missing files to gem and rdoc

== Version 0.2.4

Log and send a system notification when pong message from unknown client received.

== Version 0.2.2

Patch release which upgrades to redis-rb 2.0.4. This enables us to drop our redis monkey
patch which enabled connection timeouts for earlier redis versions. Note that earlier