@@ -1,3 +1,3 @@
 module Beetle
-  VERSION = "0.3.0.rc.9"
+  VERSION = "0.3.0.rc.10"
 end
